# hw8-relational-database

./: .gitignore  README.md  create_database.py  education.sql  pyproject.toml  query_sql.py  selections_from_database.py
