[tool.poetry]
name = "hw8-relational-database"
version = "0.1.0"
description = ""
authors = ["PavelStelmakhV <stelmahpv13@gmail.com>"]
readme = "README.md"
packages = [{include = "hw8_relational_database"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^15.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
